--- a/examples/relay-with-helix/index.html
+++ b/examples/relay-with-helix/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="index.jsx"></script>
+<script  src="./app/index.tsx"></script>
 </body>
 </html>
