--- a/examples/relay-with-helix/index.html
+++ b/examples/relay-with-helix/index.html
@@ -5,7 +5,7 @@
 	<title>meros example with relay + helix</title>
 </head>
 <body>
-<div id="app"></div>
-<script  src="./app/index.tsx"></script>
+	<div id="app"></div>
+	<script type="module" src="/app/index.tsx"></script>
 </body>
 </html>
