--- a/examples/bare/index.html
+++ b/examples/bare/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <script type='module'>
-	import { meros } from 'https://unpkg.com/meros@latest/browser/index.mjs?module';
+	import { meros } from 'https://cdn.skypack.dev/meros';
 
 	const parts = await fetch('/data').then(meros);
 
